tests/reference/asr_preprocess-cpp5-4cb2070.stderr
tests/errors/cpp5.f90:5:13 semantic error: Variable 'z12345678' not declared
print *, x, C123
            ^~~~
